@@ -101,18 +101,13 @@ exports.Minify={
                 try{
                     lMinify      = require('minify');
                 }catch(pError){
-                    try{
-                        console.log(pError);
-                        lMinify      = require('minify');                        
-                    }catch(pError){
-                        return console.log('Could not minify'   +
-                            'withou minify module\n'            +
-                            'for fixing type:\n'                +
-                            'git submodule init\n'              +
-                            'git submodule update\n'            +
-                            'or\n'                              +
-                            'npm i minify');
-                    }
+                    return console.log('Could not minify'   +
+                        'withou minify module\n'            +
+                        'for fixing type:\n'                +
+                        'git submodule init\n'              +
+                        'git submodule update\n'            +
+                        'or\n'                              +
+                        'npm i minify');
                 }
                 /*
                  * temporary changed dir path,
