@@ -1,6 +1,8 @@
 2012.07.*, Version 0.1.2
 
 * Added suport of jitsu.
+* Added module objects.js, Minify and Cache objects moved there.
+* Module Minify moved to node_modules dir
 
 
 2012.07.11, Version 0.1.1
